fixing typo found by Jae-hyeon Park

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1031,7 +1031,7 @@ approximation when singlet mixing is very small\footnote{These
  partial two-loop corrections does not change the formal accuracy
  the user should choose whether or not to include these corrections
  based on the physics they study.  Similarly in models that go beyond
- the NMSSM the user must decide based on the physics whether on not these
+ the NMSSM the user must decide based on the physics whether or not these
  corrections will give the leading two-loop corrections in their
  model.
 
