--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,9 @@ FlexibleSUSY-1.0.5 [not released yet]
  * Bugfix (commit 29a0833): incorporate tadpole contributions in pole
    masses of singlets
 
+ * Bugfix (commit 3422d88): ensure only gluon is removed from top
+   self-energy for calculation of top DR-bar mass in the SM
+
 FlexibleSUSY-1.0.4 [January, 15 2015]
 
  * Add new user example program run_cmd_line_<model>.x to run a
