--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Peter Athron            peter.athron@adelaide.edu.au
+Peter Athron            peter.athron@coepp.org.au
 Jae-hyeon Park          jae.park@uv.es
 Dominik Stöckinger      Dominik.Stoeckinger@tu-dresden.de
-Alexander Voigt         Alexander.Voigt@physik.tu-dresden.de
+Alexander Voigt         Alexander.Voigt@desy.de
