--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -2977,6 +2977,7 @@ This work has been supported by the German Research Foundation DFG
 through Grant No.~STO876/2-1.
 
 \appendix
+\renewcommand{\thesection}{\Alph{section}}
 
 \section{Examples of C++ code adaptation}
 \label{sec:examples of c++ code adaptation}
