--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,9 @@ FlexibleSUSY-1.0.5 [not released yet]
  * Bugfix (commit 0a2c91a): omit DR-bar conversion factor in the
    calculation of alpha_em in non-SUSY models.
 
+ * Bugfix (commit 0084e11): adding MS-bar conversion terms to the
+   self-energies of non-SUSY models.
+
 FlexibleSUSY-1.0.4 [January, 15 2015]
 
  * Add new user example program run_cmd_line_<model>.x to run a
