--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,12 @@ FlexibleSUSY-1.1.0 [not released yet]
    calculation of one of the pole masses failed due to
    non-convergence.
 
+ * Feature: New (non-templated) intermediate model class
+   <model>_imodel, which is able to calculate the pole and running
+   mass spectrum.  <model>_imodel is derived from
+   <model>_soft_parameters.  The templated model class
+   <model><Two_scale> is now derived from <model>_imodel .
+
  * Bugfix (commit 4a1c471): ensure that the lightest CP-odd Higgs mass
    is used in the two-loop Higgs self-energy and tadpole corrections.
    Before, there were cases where a Goldstone boson mass was used.
