--- a/ChangeLog
+++ b/ChangeLog
@@ -26,9 +26,7 @@ FlexibleSUSY-1.1.0 [not released yet]
    The default SARAH model file to be used with a given FlexibleSUSY
    model file can be set via FSDefaultSARAHModel = <model>;
 
- * Feature: Complex model parameters are now supported.  Linked to
-   this, the following new model files with complex parameters were
-   added: cSM, cMSSM, cCMSSM, CMSSMCPV, NMSSMCPV.
+ * Feature: Complex model parameters are now supported.
 
  * Feature: The CKM and PMNS matrix can now be used as low-energy
    inputs.  They are read from the VCKMIN and UPMNSIN input blocks,
