--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+FlexibleSUSY-1.2.0 [not released yet]
+
+ * Feature: Allow the user to add 3-loop beta-functions in the SM.
+   The beta-functions were take from SUSYHD v1.0.
+
 FlexibleSUSY-1.1.1 [June, 08 2015]
 
  * Bugfix (commit e1ea433): Catch NaNs from Slavich's NMSSM 2-loop
