--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@ FlexibleSUSY-1.2.0 [not released yet]
  * Feature: Allow the user to add 3-loop beta-functions in the SM.
    The beta-functions were take from SUSYHD v1.0.
 
+ * Feature: Allow the user to add 2-loop Higgs self-energy corrections
+   O(alpha_t^2) in the SM.  The self-energy corrections were take from
+   arxiv:1205.6497.
+
 FlexibleSUSY-1.1.1 [June, 08 2015]
 
  * Bugfix (commit e1ea433): Catch NaNs from Slavich's NMSSM 2-loop
