--- a/ChangeLog
+++ b/ChangeLog
@@ -17,8 +17,10 @@ FlexibleSUSY-1.2.0 [not released yet]
    compilation error in the NE6SSM or the UMSSM if ThetaWp is set to
    an expression that involves the charges.
 
- * Bugfix (commit d80c30f): Correcting SLHA-2 convention for input
-   scale of tan(beta) in the lowNMSSM.
+ * Bugfix (commits d80c30f, e6c8dda): Correcting input scale of
+   tan(beta) in the lowNMSSM according to SLHA-2 convention.  The
+   model file lowNMSSMTanBetaAtMZ has been added, where tan(beta) is
+   input at MZ.
 
 FlexibleSUSY-1.1.1 [June, 08 2015]
 
