--- a/addons/gm2calc/README
+++ b/addons/gm2calc/README
@@ -39,21 +39,19 @@ argument to make.  For example:
 In the following list all supported variables and their default values
 are given:
 
-  CXX              := g++
-  CPPFLAGS         := -I. -Isrc
-  CXXFLAGS         := -O2 -std=c++11
-  CXX_DEP_GEN      := $(CXX)
-  CXXFLAGS_DEP_GEN := $(CXXFLAGS)
-  FC               := gfortran
-  FFLAGS           := -O2 -frecursive
-  FLIBS            := -lgfortran -lm
-  FOR_DEP_GEN      := $(FC)
-  MAKELIB          := ar cru
-  BLASLIBS         := -lblas
-  BOOSTFLAGS       := -I/usr/include
-  EIGENFLAGS       := -I/usr/include/eigen3
-  LAPACKLIBS       := -llapack -lblas
-  LIBEXT           := .a
+  CXX             := g++
+  CPPFLAGS        := -I. -Isrc
+  CXXFLAGS        := -O2 -std=c++11
+  CXX_DEP_GEN     := g++
+  FC              := gfortran
+  FFLAGS          := -O2 -frecursive
+  FLIBS           := -lgfortran -lm
+  FOR_DEP_GEN     := gfortran
+  MAKELIB         := ar cru
+  BLASLIBS        := -lblas
+  BOOSTFLAGS      := -I/usr/include
+  EIGENFLAGS      := -I/usr/include/eigen3
+  LAPACKLIBS      := -llapack -lblas
 
 
 Running GM2Calc
