rename executable gm2.x -> gm2calc.x

--- a/addons/gm2calc/README
+++ b/addons/gm2calc/README
@@ -60,20 +60,20 @@ Running GM2Calc
 
 GM2Calc can be run with (i) either an SLHA interface or with (ii) a
 custom GM2Calc interface (similar to SLHA, but different definition of
-input parameters).  See `bin/gm2.x --help' for all options.
+input parameters).  See `bin/gm2calc.x --help' for all options.
 
 Example using the SLHA interface:
 
-  $ bin/gm2.x --slha-input-file=input/slha.in
+  $ bin/gm2calc.x --slha-input-file=input/slha.in
 
 or
 
-  $ cat input/slha.in | bin/gm2.x --slha-input-file=-
+  $ cat input/slha.in | bin/gm2calc.x --slha-input-file=-
 
 Example using the GM2Calc interface:
 
-  $ bin/gm2.x --gm2calc-input-file=input/gm2calc.in
+  $ bin/gm2calc.x --gm2calc-input-file=input/gm2calc.in
 
 or
 
-  $ cat input/gm2calc.in | bin/gm2.x --gm2calc-input-file=-
+  $ cat input/gm2calc.in | bin/gm2calc.x --gm2calc-input-file=-
