--- a/addons/gm2calc/README
+++ b/addons/gm2calc/README
@@ -23,7 +23,7 @@ Requirements
 Compilation
 ===========
 
-To compile the GM2Calc run
+To compile GM2Calc run
 
   $ make
 
@@ -77,3 +77,55 @@ Example using the GM2Calc interface:
 or
 
   $ cat input/gm2calc.in | bin/gm2calc.x --gm2calc-input-file=-
+
+
+SLHA interface
+==============
+
+When the input parameters are provided in SLHA-compliant form, GM2Calc
+reads the input parameters from the following blocks:
+
+ * SMINPUTS: Standard Model fermion masses, W and Z pole masses,
+   alpha_s(MZ)
+
+ * MASS: pole masses of SUSY particles, W pole mass
+
+ * HMIX: tan(beta), mu parameter, renormalization scale
+
+ * AU, AD, AE: soft-breaking trilinear couplings, renormalization
+   scale
+
+ * MSOFT: soft-breaking gaugino masses, soft-breaking sfermion masses,
+   renormalization scale
+
+
+GM2Calc interface
+=================
+
+When the input parameters are provided in GM2Calc specific form,
+GM2Calc reads the input parameters from the following blocks:
+
+ * SMINPUTS: Standard Model fermion masses, W and Z pole masses,
+   alpha_s(MZ)
+
+ * GM2CalcInput: renormalization scale, alpha_em(MZ), alpha_em in the
+   Thompson limit, tan(beta), mu parameter, soft-breaking gaugino
+   masses, soft-breaking Bmu parameter, soft-breaking sfermion masses,
+   soft-breaking trilinear couplings
+
+
+Configuration options
+=====================
+
+The calculation of a_mu can be controlled in the GM2CalcConfig block.
+
+ * GM2CalcConfig[0]: output format (0 ... 4)
+
+   0: minimal output (a single number)
+   1: detailed (a detailed output of the various contributions)
+   2: write the value of (g-2)/2 into LOWEN block, entry 6
+   3: write the value of (g-2)/2 into SPhenoLowEnergy block, entry 21
+
+ * GM2CalcConfig[1]: loop order of the calculation (1 or 2)
+
+ * GM2CalcConfig[2]: disable/enable tan(beta) resummation (0 or 1)
