--- a/addons/gm2calc/README
+++ b/addons/gm2calc/README
@@ -2,7 +2,7 @@ GM2Calc
 =======
 
 GM2Calc calculates the SUSY contributions to a_mu = (g-2)/2 in the
-real MSSM.
+real MSSM at the 1- and leading 2-loop level.
 
 Homepage:                https://gm2calc.hepforge.org
 Source code repository:  https://github.com/gm2calc
