--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-FlexibleSUSY 2.0.1 [not released yet]
+FlexibleSUSY 2.0.1 [October, 20 2017]
 
  * Feature: For each FlexibleSUSY <model> the TeX file
    <model>/<model>_references.tex is created, which contains \cite{}
