--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,10 @@ FlexibleSUSY 2.0.2 [not released yet]
    (* applied to all vertices *)
    FSVertexRules = { g1 -> 0, g2 -> 0 };
 
+ * Bugfix (commit d00b4f5): Extract electric charge from
+   particle-anti-particle-photon vertex if the user has not defined
+   the electric charge in SARAH's particles.m file.
+
 FlexibleSUSY 2.0.1 [October, 20 2017]
 
  * Feature: For each FlexibleSUSY <model> the TeX file
